replaceme.css
/*
Replace this example stylesheet with your own.
Please try to keep the code formatting nice.

We want to see a sensible mobile-first, responsive design.
This means the default styles are for the smallest mobile size.
*/

/* Multi-line rulesets must use whitespace for indentation consistently. */

/*Default Mobile Approach*/

html {
	scroll-behavior: smooth;
	margin: 0;
	box-sizing: border-box;
}

body {
	/* note the indentation here */

	/*background-image: url(https://wallpaperaccess.com/full/379927.jpg);
  background-repeat: no-repeat;
	background-size: cover;*/
	background-color: black;
	overflow: auto;


}



.social-menu ul {
    position: absolute;
    top: 10%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 0;
    margin: 0;
    display: flex;

}
.social-menu ul li {
    list-style: none;
    margin: 0 5px;
}
.social-menu ul li .fa {
    color: #000000;
    font-size: 25px;
    line-height: 50px;
    transition: .5s;
}
.social-menu ul li .fa:hover {
    color: #ffffff;
}
.social-menu ul li a {
    position: relative;
    display: block;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: white;
    text-align: center;
    transition: 0.5s;
    transform: translate(0,0px);
    box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.5);
}
.social-menu ul li a:hover {
    transform: rotate(0deg) skew(0deg) translate(0, -10px);
}
.social-menu ul li:nth-child(1) a:hover {
    background-color: #3b5999;
}
.social-menu ul li:nth-child(2) a:hover {
    background-color: #55acee;
}
.social-menu ul li:nth-child(3) a:hover {
    background-color: #e4405f;
}
.social-menu ul li:nth-child(4) a:hover {
    background-color: #cd201f;
}
.social-menu ul li:nth-child(5) a:hover {
    background-color: #0077B5;
}
/*
.twitter-icon{
	color:white;
	font-size: 25px;
	transition: color:0.2s;
	text-decoration: none;
	margin:0px 10px;


}

.twitter-icon:hover{
	color:#1DA1F2;
}

.youtube-icon{
	color:white;
	font-size: 25px;
	transition: color:0.2s;
	text-decoration: none;
	margin: 0px 10px;

}

.youtube-icon:hover{
	color:#c4302b ;
}

.insta-icon{
	color: white;
	font-size: 25px;
	transition: color:0.2s;
	margin: 0px 10px;
}

.insta-icon:hover{
	color:#fccc63;
} */

#btnScrollToTop{
	position: fixed;
	right: 10px;
	bottom: 10px;
	width: 50px;
	height:50px;
	border-radius: 50px;
	background: #e62739;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
	color: #ffffff;
	outline: none;
	cursor: pointer;
	border: none;


}

#btnScrollToTop:active {
	background: #cc2333;
}

#menuToggler{
	position: fixed;
	top: 0.5em;
	right: 0.5em;
	height: 1em;
	width: 1em;

	/*Puts menu in flex box*/
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	z-index: 20;
	background-color: rgba(0, 0, 0, 0.7);
	padding: 0.25em;
}

#menuToggler div {
	height: 20%;
	background: red;
	transition: transform 0.3s;
}
#menuToggler.open div:nth-child(1) {
	transform: translateY(0.3em) rotate(45deg);
}
#menuToggler.open div:nth-child(3) {
	transform: translateY(-0.5em) rotate(-45deg);
}
#menuToggler.open div:nth-child(2) {
	opacity: 0;
}



header,main,section,article{
	overflow: auto;
}



header{
	font-size: 1em;
	min-height: 100vh;
	background-image: url(https://wallpaperaccess.com/full/379927.jpg);
  background-size: cover;
	text-align: center;
	/*H1 goes to bootmo of page*/
	display: flex;
	flex-direction: column;
	justify-content: flex-end;
	overflow: auto;
	justify-content: center;
	box-sizing: border-box;

}

#search{
	order: 1;
	color:red;
}

header h1{
	background-color: rgba(0, 0, 0, 0.7)
	margin:0;
	padding: 0.25em 1em;
	color: red;
}

/*Navigation when open*/
header nav{
	font-weight: 100;
	letter-spacing: 0.2em;
	display: flex;
	flex-direction: column;


}

#menuToggler.open + header nav{
	transform: translate(0);
}






/* One-liners are fine for very simple rulesets. */
h1 {
	font-family: serif;
  color: white;

}

h2{
	color: white;
}

p{
	color: white;
}
/*
/#menu {
	display: none;
	flex-direction: column;
	overflow: hidden;
	display: block;
	text-align: center;
	top: 0;
	width: 100%;
}*/

#menu a {


	color: white;
	text-align: center;
	padding: 14px 16px;
}




#menu a:hover {
  background: red;
  color: white;
}

nav.open{

	display: flex;

}

.allRankingsFlexContainer{
	display: flex;
	flex-wrap:wrap;
	justify-content: space-around;
	align-items: start;
	color: white;
	background-color: black;
	width: 75%;
}

.drop{
	background: white;
	display:flex;
	color:grey;
	font-size: 20px;
	cursor: pointer;

}

.dropdown +.drop:focus,
.drop:hover{
	color: red;
}

.dropdown{
	position:relative;

}

.dropdown-menu{

	position: absolute;
	left: 0;
	top: calc(100% + .25rem);
	background-color: black;
	padding: .75rem;
	border-radius: .25rem;
	box-shadow: 0 2px 5px 0 rgba(0,0,0, .1);
	opacity: 0;
	pointer-events: none;
	transform: translateY(-10px);
	transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;


}

.dropdown > .drop:focus + .dropdown-menu{

	opacity: 1;
	transform: translateY(0);
	pointer-events: auto;


}
/* .dropdown.active > .drop + .dropdown-menu{

	opacity:1;
	transform: translateY(0);
	pointer-events: auto;

} */

.img-df{
	width: 100px;
}

.img-pyan{
	width: 100px;
}

.img-avolk{
	width: 100px;
}

.img-colives{
	width: 100px;
}

.img-kusman{
	width: 100px;
}

.img-isanya{
	width: 100px;
}

.img-gtex{
	width: 100px;
}

.img-fngannou{
	width: 100px;
}






h3{
	color: white;
}

.upcomingEvent{
	color: white;
}

a[href^="http"]::after {
	content: " (" attr(href) ")";

}

.gotopbtn{
	position: fixed;
	width: 50px;
	height: 50px;
	background: #f1c40f;
	bottom:40px;
	right:50px;
}

footer{
	color: white;
}

/*Default Mobile Ends Here*/


/*Natural Breakpoints begin here*/
/*
You will probably need at least two media queries to handle larger screens.
Your queries should be configured to work with your content
*/
/*Screen changes when screen passes a minimum size*/
@media screen and (min-width: 500px) {
	/* Code inside media queries should be indented one step further. */
	body {
		font-size: 1.2em;


	 }

}

/*
We don't want to see a min-width of 457px in your code
This was chosen to match the template content.
*/

main {
	margin-top: 30px;
}

@media screen and (min-width: 800px) {

#menu {
	display: none;
	flex-direction: column;
	overflow: hidden;
	display: block;
	text-align: center;
	top: 0;
	width: 100%;
}

#menu a {
	float: left;
	display: block;
	color: white;
	text-align: center;
	padding: 14px 16px;/*Space between anchors inside*/
}

}

#menu a:hover {
  background: #ddd;
  color: red;
}



/**/

/*Other than mobile image background*/
@media screen and (min-width: 506px) {


}

